--- a/Diwali_Sales_Analysis.ipynb
+++ b/Diwali_Sales_Analysis.ipynb
@@ -2,34 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "0979edbb",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# import python libraries\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumbers\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m \n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m \n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m \u001b[38;5;66;03m# visualizing data\u001b[39;00m\n\u001b[0;32m      5\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_line_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmatplotlib\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124minline\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import python libraries\n",
-    "import numpy as np #for working on Array\n",
-    "import pandas as pd #for working on tables/dataframe\n",
+    "\n",
+    "import numpy as np \n",
+    "import pandas as pd \n",
     "import matplotlib.pyplot as plt # visualizing data\n",
     "%matplotlib inline\n",
-    "import seaborn as sns  # visualizing data"
+    "import seaborn as sns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7fbfb436",
    "metadata": {},
    "outputs": [],
@@ -40,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b8db4a5b",
    "metadata": {},
    "outputs": [
@@ -322,7 +311,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# drop null values , inplace-> saves in the dataframe\n",
+    "# drop null values\n",
     "df.dropna(inplace=True)"
    ]
   },
@@ -928,8 +917,9 @@
    ],
    "source": [
     "# plotting a bar chart for Gender and it's count\n",
+    "\n",
     "ax = sns.countplot(x = 'Gender',data = df)\n",
-    "#for adding lebels in bars\n",
+    "\n",
     "for bars in ax.containers:\n",
     "    ax.bar_label(bars)"
    ]
@@ -963,7 +953,9 @@
    ],
    "source": [
     "# plotting a bar chart for gender vs total amount\n",
+    "\n",
     "sales_gen = df.groupby(['Gender'], as_index=False)['Amount'].sum().sort_values(by='Amount', ascending=False)\n",
+    "\n",
     "sns.barplot(x = 'Gender',y= 'Amount' ,data = sales_gen)"
    ]
   },
@@ -1002,6 +994,7 @@
    ],
    "source": [
     "ax = sns.countplot(data = df, x = 'Age Group', hue = 'Gender')\n",
+    "\n",
     "for bars in ax.containers:\n",
     "    ax.bar_label(bars)"
    ]
@@ -1036,6 +1029,7 @@
    "source": [
     "# Total Amount vs Age Group\n",
     "sales_age = df.groupby(['Age Group'], as_index=False)['Amount'].sum().sort_values(by='Amount', ascending=False)\n",
+    "\n",
     "sns.barplot(x = 'Age Group',y= 'Amount' ,data = sales_age)"
    ]
   },
@@ -1084,7 +1078,9 @@
    ],
    "source": [
     "# total number of orders from top 10 states\n",
+    "\n",
     "sales_state = df.groupby(['State'], as_index=False)['Orders'].sum().sort_values(by='Orders', ascending=False).head(10)\n",
+    "\n",
     "sns.set(rc={'figure.figsize':(15,5)})\n",
     "sns.barplot(data = sales_state, x = 'State',y= 'Orders')"
    ]
@@ -1118,7 +1114,9 @@
    ],
    "source": [
     "# total amount/sales from top 10 states\n",
+    "\n",
     "sales_state = df.groupby(['State'], as_index=False)['Amount'].sum().sort_values(by='Amount', ascending=False).head(10)\n",
+    "\n",
     "sns.set(rc={'figure.figsize':(15,5)})\n",
     "sns.barplot(data = sales_state, x = 'State',y= 'Amount')"
    ]
@@ -1158,6 +1156,7 @@
    ],
    "source": [
     "ax = sns.countplot(data = df, x = 'Marital_Status')\n",
+    "\n",
     "sns.set(rc={'figure.figsize':(7,5)})\n",
     "for bars in ax.containers:\n",
     "    ax.bar_label(bars)"
@@ -1192,6 +1191,7 @@
    ],
    "source": [
     "sales_state = df.groupby(['Marital_Status', 'Gender'], as_index=False)['Amount'].sum().sort_values(by='Amount', ascending=False)\n",
+    "\n",
     "sns.set(rc={'figure.figsize':(6,5)})\n",
     "sns.barplot(data = sales_state, x = 'Marital_Status',y= 'Amount', hue='Gender')"
    ]
@@ -1266,6 +1266,7 @@
    ],
    "source": [
     "sales_state = df.groupby(['Occupation'], as_index=False)['Amount'].sum().sort_values(by='Amount', ascending=False)\n",
+    "\n",
     "sns.set(rc={'figure.figsize':(20,5)})\n",
     "sns.barplot(data = sales_state, x = 'Occupation',y= 'Amount')"
    ]
@@ -1306,6 +1307,7 @@
    "source": [
     "sns.set(rc={'figure.figsize':(20,5)})\n",
     "ax = sns.countplot(data = df, x = 'Product_Category')\n",
+    "\n",
     "for bars in ax.containers:\n",
     "    ax.bar_label(bars)"
    ]
@@ -1339,6 +1341,7 @@
    ],
    "source": [
     "sales_state = df.groupby(['Product_Category'], as_index=False)['Amount'].sum().sort_values(by='Amount', ascending=False).head(10)\n",
+    "\n",
     "sns.set(rc={'figure.figsize':(20,5)})\n",
     "sns.barplot(data = sales_state, x = 'Product_Category',y= 'Amount')"
    ]
@@ -1380,6 +1383,7 @@
    ],
    "source": [
     "sales_state = df.groupby(['Product_ID'], as_index=False)['Orders'].sum().sort_values(by='Orders', ascending=False).head(10)\n",
+    "\n",
     "sns.set(rc={'figure.figsize':(20,5)})\n",
     "sns.barplot(data = sales_state, x = 'Product_ID',y= 'Orders')"
    ]
@@ -1438,6 +1442,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1e91055b",
+   "metadata": {},
+   "source": [
+    "complete project on YouTube: https://www.youtube.com/@RishabhMishraOfficial\n",
+    "    \n",
+    "complete project on GitHub: https://github.com/rishabhnmishra/Python_Diwali_Sales_Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d7bfbc58",
    "metadata": {},
    "source": [
@@ -1461,7 +1475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
